--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "mdbreact": "^5.0.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
+    "react-calendar": "^3.2.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-responsive-carousel": "^3.2.10",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "redux": "^4.0.5",
+    "uuid": "^8.3.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
