--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^4.5.3",
     "mdbreact": "^5.0.0",
     "react": "^17.0.1",
+    "react-big-calendar": "^0.30.0",
     "react-bootstrap": "^1.4.0",
     "react-calendar": "^3.2.1",
     "react-dom": "^17.0.1",
