--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-responsive-carousel": "^3.2.10",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-scrollable-anchor": "^0.6.1",
     "redux": "^4.0.5",
     "uuid": "^8.3.1",
     "web-vitals": "^0.2.4"
